fix: static nginx file is replaced by dynamic config which fetch directly by inventory generated by terraform (fixes #2)

--- a/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.conf.j2
@@ -1,5 +1,9 @@
 upstream backend_app{
 	server 127.0.0.1:5000 ;
+	{% for host in groups['web-server'] %}
+	server {{ host }}:5000 ;
+
+	{% endfor %}
 }
 server {
 	listen 80 default_server;
